--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
                 <li><button><a href="#home">Home</a></button></li>
                 <li> <button><a href="#about">About Us</a></button></li>
                 <li> <button><a href="#skills">Skills</a></button></li>
-                <li><button><a href="#experience">Experiance</a></button></li>
+                <li><button><a href="#education">Education</a></button></li>
                 <li><button><a href="#projects">Projects</a></button></li>
             </ul>
         </nav>
@@ -114,9 +114,28 @@
             </div>
         </section>
         
-        <!-- experience -->
-        <section id="experience">
-            <h1><b><u>Experience</u></b></h1>
+        <!-- education -->
+        <section id="education">
+            <h1><b><u>Education</u></b></h1>
+            <div class="edu-item">
+    <h3>Bachelor of Computer Applications (BCA)</h3>
+    <p class="college">IMS Noida</p>
+    <span class="year">2021-2025</span>
+    <p class="details">Learned software development, web technologies and problem-solving.</p>
+  </div>
+
+  <div class="edu-item">
+    <h3>Class 12th (Commerce)</h3>
+    <p class="college">Lions School, Mirzapur</p>
+    <span class="year">2020-2021</span>
+  </div>
+
+  <div class="edu-item">
+    <h3>Class 10th</h3>
+    <p class="college">Lions School, Mirzapur</p>
+    <span class="year">2019-2020</span>
+  </div>
+
         </section>
         <!-- PROJECT SECTION -->
         <section id="projects">
